Ajustes no FMF e na organização

--- a/projeto_fmf/projeto_fmf.ipynb
+++ b/projeto_fmf/projeto_fmf.ipynb
@@ -517,7 +517,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Confusion_Matrix_DNN](../Imagens/Confusion_matrix_1.png)"
+    "![Confusion_Matrix_DNN](../assets/images/Confusion_matrix_1.png)"
    ]
   },
   {
@@ -561,7 +561,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Confusion_Matrix_Arvores](..\\Imagens\\Confusion_matrix_2.png)"
+    "![Confusion_Matrix_Arvores](..\\assets\\images\\Confusion_matrix_2.png)"
    ]
   },
   {
@@ -602,7 +602,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Confusion_Matrix_Florestas](../Imagens/Confusion_matrix_3.png)"
+    "![Confusion_Matrix_Florestas](../assets/images/Confusion_matrix_3.png)"
    ]
   },
   {
@@ -681,7 +681,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Confusion_Matrix_Under_Sampling](../Imagens/Confusion_matrix_4.png)"
+    "![Confusion_Matrix_Under_Sampling](../assets/images/Confusion_matrix_4.png)"
    ]
   },
   {
@@ -714,7 +714,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Confusion_Matrix_Over_Sampling](../Imagens/Confusion_matrix_5.png)"
+    "![Confusion_Matrix_Over_Sampling](../assets/images/Confusion_matrix_5.png)"
    ]
   },
   {
