Smote and Standardization

--- a/projeto_original/data_exploration.ipynb
+++ b/projeto_original/data_exploration.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "(284807, 31)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,16 +256,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.int64(0)"
+       "0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "(1081, 31)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,14 +307,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\habee\\AppData\\Local\\Temp\\ipykernel_8932\\3819310256.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/tmp/ipykernel_7025/3819310256.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df[df.duplicated()][df['Class'] == 1].shape\n"
      ]
     },
@@ -324,7 +324,7 @@
        "(19, 31)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
        "(0, 31)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,10 +373,484 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from imblearn.over_sampling import SMOTE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dividimos os dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.drop('Class', axis=1) \n",
+    "y = df['Class']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aplicamos o SMOTE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "smote = SMOTE(random_state=42)\n",
+    "X_resampled, y_resampled = smote.fit_resample(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_resampled = pd.DataFrame(X_resampled, columns=X.columns)\n",
+    "df_resampled['Class'] = y_resampled"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Juntamos os dados para um csv maior\n",
+    "\n",
+    "Vamos fazer um standardization também, para o valores poderem ser usados pelo modelos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "df_resampled[\"Amount\"] =  scaler.fit_transform(df_resampled[\"Amount\"].values.reshape(-1,1))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualizacao dos dados tratados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time</th>\n",
+       "      <th>V1</th>\n",
+       "      <th>V2</th>\n",
+       "      <th>V3</th>\n",
+       "      <th>V4</th>\n",
+       "      <th>V5</th>\n",
+       "      <th>V6</th>\n",
+       "      <th>V7</th>\n",
+       "      <th>V8</th>\n",
+       "      <th>V9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>V21</th>\n",
+       "      <th>V22</th>\n",
+       "      <th>V23</th>\n",
+       "      <th>V24</th>\n",
+       "      <th>V25</th>\n",
+       "      <th>V26</th>\n",
+       "      <th>V27</th>\n",
+       "      <th>V28</th>\n",
+       "      <th>Amount</th>\n",
+       "      <th>Class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-1.359807</td>\n",
+       "      <td>-0.072781</td>\n",
+       "      <td>2.536347</td>\n",
+       "      <td>1.378155</td>\n",
+       "      <td>-0.338321</td>\n",
+       "      <td>0.462388</td>\n",
+       "      <td>0.239599</td>\n",
+       "      <td>0.098698</td>\n",
+       "      <td>0.363787</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.018307</td>\n",
+       "      <td>0.277838</td>\n",
+       "      <td>-0.110474</td>\n",
+       "      <td>0.066928</td>\n",
+       "      <td>0.128539</td>\n",
+       "      <td>-0.189115</td>\n",
+       "      <td>0.133558</td>\n",
+       "      <td>-0.021053</td>\n",
+       "      <td>0.238968</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.191857</td>\n",
+       "      <td>0.266151</td>\n",
+       "      <td>0.166480</td>\n",
+       "      <td>0.448154</td>\n",
+       "      <td>0.060018</td>\n",
+       "      <td>-0.082361</td>\n",
+       "      <td>-0.078803</td>\n",
+       "      <td>0.085102</td>\n",
+       "      <td>-0.255425</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.225775</td>\n",
+       "      <td>-0.638672</td>\n",
+       "      <td>0.101288</td>\n",
+       "      <td>-0.339846</td>\n",
+       "      <td>0.167170</td>\n",
+       "      <td>0.125895</td>\n",
+       "      <td>-0.008983</td>\n",
+       "      <td>0.014724</td>\n",
+       "      <td>-0.424565</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-1.358354</td>\n",
+       "      <td>-1.340163</td>\n",
+       "      <td>1.773209</td>\n",
+       "      <td>0.379780</td>\n",
+       "      <td>-0.503198</td>\n",
+       "      <td>1.800499</td>\n",
+       "      <td>0.791461</td>\n",
+       "      <td>0.247676</td>\n",
+       "      <td>-1.514654</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.247998</td>\n",
+       "      <td>0.771679</td>\n",
+       "      <td>0.909412</td>\n",
+       "      <td>-0.689281</td>\n",
+       "      <td>-0.327642</td>\n",
+       "      <td>-0.139097</td>\n",
+       "      <td>-0.055353</td>\n",
+       "      <td>-0.059752</td>\n",
+       "      <td>1.273308</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.966272</td>\n",
+       "      <td>-0.185226</td>\n",
+       "      <td>1.792993</td>\n",
+       "      <td>-0.863291</td>\n",
+       "      <td>-0.010309</td>\n",
+       "      <td>1.247203</td>\n",
+       "      <td>0.237609</td>\n",
+       "      <td>0.377436</td>\n",
+       "      <td>-1.387024</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.108300</td>\n",
+       "      <td>0.005274</td>\n",
+       "      <td>-0.190321</td>\n",
+       "      <td>-1.175575</td>\n",
+       "      <td>0.647376</td>\n",
+       "      <td>-0.221929</td>\n",
+       "      <td>0.062723</td>\n",
+       "      <td>0.061458</td>\n",
+       "      <td>0.121010</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>-1.158233</td>\n",
+       "      <td>0.877737</td>\n",
+       "      <td>1.548718</td>\n",
+       "      <td>0.403034</td>\n",
+       "      <td>-0.407193</td>\n",
+       "      <td>0.095921</td>\n",
+       "      <td>0.592941</td>\n",
+       "      <td>-0.270533</td>\n",
+       "      <td>0.817739</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.009431</td>\n",
+       "      <td>0.798278</td>\n",
+       "      <td>-0.137458</td>\n",
+       "      <td>0.141267</td>\n",
+       "      <td>-0.206010</td>\n",
+       "      <td>0.502292</td>\n",
+       "      <td>0.219422</td>\n",
+       "      <td>0.215153</td>\n",
+       "      <td>-0.120640</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>566501</th>\n",
+       "      <td>41183.445750</td>\n",
+       "      <td>-7.151786</td>\n",
+       "      <td>5.337862</td>\n",
+       "      <td>-10.524210</td>\n",
+       "      <td>6.638176</td>\n",
+       "      <td>-7.107253</td>\n",
+       "      <td>-3.688276</td>\n",
+       "      <td>-11.629728</td>\n",
+       "      <td>4.641323</td>\n",
+       "      <td>-6.040679</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.101089</td>\n",
+       "      <td>-0.223411</td>\n",
+       "      <td>0.029599</td>\n",
+       "      <td>0.393875</td>\n",
+       "      <td>-0.049155</td>\n",
+       "      <td>0.544700</td>\n",
+       "      <td>1.306198</td>\n",
+       "      <td>0.223600</td>\n",
+       "      <td>-0.357981</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>566502</th>\n",
+       "      <td>14264.057012</td>\n",
+       "      <td>-4.705909</td>\n",
+       "      <td>8.250299</td>\n",
+       "      <td>-14.559164</td>\n",
+       "      <td>9.787990</td>\n",
+       "      <td>-4.117161</td>\n",
+       "      <td>-3.169121</td>\n",
+       "      <td>-10.169571</td>\n",
+       "      <td>4.500750</td>\n",
+       "      <td>-5.177936</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.988732</td>\n",
+       "      <td>0.194092</td>\n",
+       "      <td>0.480124</td>\n",
+       "      <td>-1.079562</td>\n",
+       "      <td>-0.444215</td>\n",
+       "      <td>0.557467</td>\n",
+       "      <td>1.234855</td>\n",
+       "      <td>0.627900</td>\n",
+       "      <td>-0.429040</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>566503</th>\n",
+       "      <td>135064.971368</td>\n",
+       "      <td>0.407366</td>\n",
+       "      <td>1.352354</td>\n",
+       "      <td>-4.892782</td>\n",
+       "      <td>3.554728</td>\n",
+       "      <td>-1.282114</td>\n",
+       "      <td>-1.271505</td>\n",
+       "      <td>-0.977517</td>\n",
+       "      <td>0.462476</td>\n",
+       "      <td>-1.442286</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.765180</td>\n",
+       "      <td>0.703300</td>\n",
+       "      <td>0.814076</td>\n",
+       "      <td>0.814930</td>\n",
+       "      <td>-0.300969</td>\n",
+       "      <td>0.168339</td>\n",
+       "      <td>0.236775</td>\n",
+       "      <td>0.037244</td>\n",
+       "      <td>0.841150</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>566504</th>\n",
+       "      <td>109361.849259</td>\n",
+       "      <td>0.580032</td>\n",
+       "      <td>2.773047</td>\n",
+       "      <td>-5.790024</td>\n",
+       "      <td>5.606953</td>\n",
+       "      <td>0.398480</td>\n",
+       "      <td>-0.621865</td>\n",
+       "      <td>-2.954884</td>\n",
+       "      <td>0.837074</td>\n",
+       "      <td>-1.822486</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.311488</td>\n",
+       "      <td>-0.810361</td>\n",
+       "      <td>-0.067584</td>\n",
+       "      <td>-0.632356</td>\n",
+       "      <td>0.414552</td>\n",
+       "      <td>0.073243</td>\n",
+       "      <td>0.736440</td>\n",
+       "      <td>0.358067</td>\n",
+       "      <td>-0.417994</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>566505</th>\n",
+       "      <td>84438.552579</td>\n",
+       "      <td>-2.819178</td>\n",
+       "      <td>2.410529</td>\n",
+       "      <td>-5.833727</td>\n",
+       "      <td>4.099991</td>\n",
+       "      <td>-2.622497</td>\n",
+       "      <td>-2.198030</td>\n",
+       "      <td>-6.054611</td>\n",
+       "      <td>1.857574</td>\n",
+       "      <td>-3.791847</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.163557</td>\n",
+       "      <td>-0.244352</td>\n",
+       "      <td>0.134456</td>\n",
+       "      <td>-0.292208</td>\n",
+       "      <td>0.685146</td>\n",
+       "      <td>0.740121</td>\n",
+       "      <td>1.406461</td>\n",
+       "      <td>0.319263</td>\n",
+       "      <td>-0.410103</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>566506 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Time        V1        V2         V3        V4        V5  \\\n",
+       "0            0.000000 -1.359807 -0.072781   2.536347  1.378155 -0.338321   \n",
+       "1            0.000000  1.191857  0.266151   0.166480  0.448154  0.060018   \n",
+       "2            1.000000 -1.358354 -1.340163   1.773209  0.379780 -0.503198   \n",
+       "3            1.000000 -0.966272 -0.185226   1.792993 -0.863291 -0.010309   \n",
+       "4            2.000000 -1.158233  0.877737   1.548718  0.403034 -0.407193   \n",
+       "...               ...       ...       ...        ...       ...       ...   \n",
+       "566501   41183.445750 -7.151786  5.337862 -10.524210  6.638176 -7.107253   \n",
+       "566502   14264.057012 -4.705909  8.250299 -14.559164  9.787990 -4.117161   \n",
+       "566503  135064.971368  0.407366  1.352354  -4.892782  3.554728 -1.282114   \n",
+       "566504  109361.849259  0.580032  2.773047  -5.790024  5.606953  0.398480   \n",
+       "566505   84438.552579 -2.819178  2.410529  -5.833727  4.099991 -2.622497   \n",
+       "\n",
+       "              V6         V7        V8        V9  ...       V21       V22  \\\n",
+       "0       0.462388   0.239599  0.098698  0.363787  ... -0.018307  0.277838   \n",
+       "1      -0.082361  -0.078803  0.085102 -0.255425  ... -0.225775 -0.638672   \n",
+       "2       1.800499   0.791461  0.247676 -1.514654  ...  0.247998  0.771679   \n",
+       "3       1.247203   0.237609  0.377436 -1.387024  ... -0.108300  0.005274   \n",
+       "4       0.095921   0.592941 -0.270533  0.817739  ... -0.009431  0.798278   \n",
+       "...          ...        ...       ...       ...  ...       ...       ...   \n",
+       "566501 -3.688276 -11.629728  4.641323 -6.040679  ...  2.101089 -0.223411   \n",
+       "566502 -3.169121 -10.169571  4.500750 -5.177936  ...  1.988732  0.194092   \n",
+       "566503 -1.271505  -0.977517  0.462476 -1.442286  ...  0.765180  0.703300   \n",
+       "566504 -0.621865  -2.954884  0.837074 -1.822486  ...  0.311488 -0.810361   \n",
+       "566505 -2.198030  -6.054611  1.857574 -3.791847  ...  1.163557 -0.244352   \n",
+       "\n",
+       "             V23       V24       V25       V26       V27       V28    Amount  \\\n",
+       "0      -0.110474  0.066928  0.128539 -0.189115  0.133558 -0.021053  0.238968   \n",
+       "1       0.101288 -0.339846  0.167170  0.125895 -0.008983  0.014724 -0.424565   \n",
+       "2       0.909412 -0.689281 -0.327642 -0.139097 -0.055353 -0.059752  1.273308   \n",
+       "3      -0.190321 -1.175575  0.647376 -0.221929  0.062723  0.061458  0.121010   \n",
+       "4      -0.137458  0.141267 -0.206010  0.502292  0.219422  0.215153 -0.120640   \n",
+       "...          ...       ...       ...       ...       ...       ...       ...   \n",
+       "566501  0.029599  0.393875 -0.049155  0.544700  1.306198  0.223600 -0.357981   \n",
+       "566502  0.480124 -1.079562 -0.444215  0.557467  1.234855  0.627900 -0.429040   \n",
+       "566503  0.814076  0.814930 -0.300969  0.168339  0.236775  0.037244  0.841150   \n",
+       "566504 -0.067584 -0.632356  0.414552  0.073243  0.736440  0.358067 -0.417994   \n",
+       "566505  0.134456 -0.292208  0.685146  0.740121  1.406461  0.319263 -0.410103   \n",
+       "\n",
+       "        Class  \n",
+       "0           0  \n",
+       "1           0  \n",
+       "2           0  \n",
+       "3           0  \n",
+       "4           0  \n",
+       "...       ...  \n",
+       "566501      1  \n",
+       "566502      1  \n",
+       "566503      1  \n",
+       "566504      1  \n",
+       "566505      1  \n",
+       "\n",
+       "[566506 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_resampled"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exportamos os dados para um csv, para uso posteriori"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_resampled.to_csv(\"../data/creditcard_treated.csv\")"
+   ]
   }
  ],
  "metadata": {
@@ -395,7 +869,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
