--- a/projeto_original/data_exploration.ipynb
+++ b/projeto_original/data_exploration.ipynb
@@ -384,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "dividimos os dados"
+    "Dividimos os dados em X e y para aplicarmos o SMOTE."
    ]
   },
   {
@@ -401,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aplicamos o SMOTE"
+    "Aplicamos o SMOTE."
    ]
   },
   {
@@ -428,9 +428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Juntamos os dados para um csv maior\n",
-    "\n",
-    "Vamos fazer um standardization também, para o valores poderem ser usados pelo modelos"
+    "Juntamos os dados para um csv maior. Em seguida, realizamos Standardization para diminuir a sensibilidade à valores muito altos ao aplicar o K-means."
    ]
   },
   {
@@ -449,7 +447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualizacao dos dados tratados"
+    "Visualizacao dos dados tratados."
    ]
   },
   {
@@ -840,16 +838,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exportamos os dados para um csv, para uso posteriori"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df_resampled.to_csv(\"../data/creditcard_treated.csv\")"
+    "Exportamos os dados para um csv, para uso posteriori."
    ]
   }
  ],
