--- a/projeto_fmf/projeto_fmf.ipynb
+++ b/projeto_fmf/projeto_fmf.ipynb
@@ -317,7 +317,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Os dados são separados para o Treino e Texte:\n",
+    "Os dados são separados para o Treino e Teste:\n",
     "(Parte dos dados usamos para treino e parte para teste, pois o modelo não pode testar sua acurácia com dados que já conhece)"
    ]
   },
