--- a/projeto_fmf/projeto_fmf.ipynb
+++ b/projeto_fmf/projeto_fmf.ipynb
@@ -877,9 +877,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_kernel",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "venv_kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
