--- a/projeto_original/model/clustering_kmeans.ipynb
+++ b/projeto_original/model/clustering_kmeans.ipynb
@@ -287,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Carregamento dos Dados não Tratados"
+    "### Carregamento dos Dados Tratados"
    ]
   },
   {
@@ -296,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/creditcard_treated.csv')\n",
+    "df = pd.read_csv('/home/pedro/Documents/BIA/p3/PAD/trabalho-final/deteccao-de-fraude/data/creditcard_treated.csv')\n",
     "\n",
     "class_label = df['Class']\n",
     "df = df.drop(columns=['Class'])"
@@ -326,6 +326,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "### Escolha do número de Cluster do DF tratado"
    ]
   },
