--- a/projeto_original/model/outliers_detection.ipynb
+++ b/projeto_original/model/outliers_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,16 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tamanho do Conjunto de Treino: 165397\n",
-      "Tamanho do Conjunto de Validação: 55133\n",
-      "Tamanho do Conjunto de Teste: 55133\n"
+      "Tamanho do Conjunto de Treino: 137831\n",
+      "Tamanho do Conjunto de Validação: 55132\n",
+      "Tamanho do Conjunto de Teste: 82700\n"
      ]
     }
    ],
@@ -41,9 +41,9 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Dividir os dados em treino (60%), validação (20%) e teste (20%)\n",
-    "X_train, X_temp, clusters_train, clusters_temp, y_train_outliers, y_temp_outliers = train_test_split(X, clusters, y_outliers, test_size=0.4, random_state=42, stratify=y_outliers)\n",
-    "X_val, X_test, clusters_val, clusters_test, y_val_outliers, y_test_outliers = train_test_split(X_temp, clusters_temp, y_temp_outliers, test_size=0.5, random_state=42, stratify=y_temp_outliers)\n",
+    "# Dividir os dados em treino (50%), validação (20%) e teste (30%)\n",
+    "X_train, X_temp, clusters_train, clusters_temp, y_train_outliers, y_temp_outliers = train_test_split(X, clusters, y_outliers, test_size=0.5, random_state=42, stratify=y_outliers)\n",
+    "X_val, X_test, clusters_val, clusters_test, y_val_outliers, y_test_outliers = train_test_split(X_temp, clusters_temp, y_temp_outliers, test_size=0.6, random_state=42, stratify=y_temp_outliers)\n",
     "\n",
     "# Verificar tamanhos dos conjuntos\n",
     "print(f\"Tamanho do Conjunto de Treino: {X_train.shape[0]}\")\n",
@@ -59,15 +59,16 @@
    "source": [
     "from tensorflow.keras.layers import Input, Dense\n",
     "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.optimizers import Adam\n",
     "\n",
     "# Função para criar e treinar um autoencoder para um cluster específico com hiperparâmetros variáveis\n",
-    "def train_autoencoder_with_params(X_cluster, encoding_dim, batch_size, epochs):\n",
+    "def train_autoencoder_with_params(X_cluster, encoding_dim, batch_size, epochs, learning_rate):\n",
     "    input_dim = X_cluster.shape[1]\n",
     "    input_layer = Input(shape=(input_dim,))\n",
     "    encoder = Dense(encoding_dim, activation='relu')(input_layer)\n",
     "    decoder = Dense(input_dim, activation='sigmoid')(encoder)\n",
     "    autoencoder = Model(inputs=input_layer, outputs=decoder)\n",
-    "    autoencoder.compile(optimizer='adam', loss='mse')\n",
+    "    autoencoder.compile(optimizer=Adam(learning_rate=learning_rate), loss='mse')\n",
     "    autoencoder.fit(X_cluster, X_cluster, epochs=epochs, batch_size=batch_size, shuffle=True, verbose=0)\n",
     "    return autoencoder"
    ]
